// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ambient enum 1`] = `
"declare enum Direction
{
  Up = "UP",
  Down = "DOWN",
  Left = "LEFT",
  Right = "RIGHT",
}
"
`;

exports[`computed and constant members 1`] = `
"enum FileAccess
{
  // constant members
  None,
  Read = 1 << 1,
  Write = 1 << 2,
  ReadWrite = Read | Write,
  // computed member
  G = "123".length,
}
"
`;

exports[`const enum 1`] = `
"const enum Enum
{
  A = 1,
  B = A * 2,
}
"
`;

exports[`empty enum 1`] = `
"enum Foo
{}
"
`;

exports[`heterogeneous enum 1`] = `
"enum BooleanLikeHeterogeneousEnum
{
  No = 0,
  Yes = "YES",
}
"
`;

exports[`numeric enum 1`] = `
"enum Direction
{
  Up = 1,
  Down,
  Left,
  Right,
}
"
`;

exports[`string enum 1`] = `
"enum Direction
{
  Up = "UP",
  Down = "DOWN",
  Left = "LEFT",
  Right = "RIGHT",
}
"
`;
